--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "emailjs-com": "^2.6.4",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
+    "react-contentful": "^2.0.31",
     "react-dom": "^17.0.2",
     "react-reveal": "^1.2.2",
     "react-router": "^5.2.0",
